Small changes in stats.jsx component
- Added an option to toggle between icons or names in technologies and tools.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -63,7 +63,7 @@
 }
 
 ::-webkit-scrollbar-track {
-  background: hsl(0, 0%, 98%);
+  background: hsl(var(--background));
 }
 
 ::-webkit-scrollbar-thumb {
